# grpc

./: client.py  mydb.db  pyproject.toml  repository.py  server.py  users_aplication_service.py
database/sqlite3/: session.py  sqlite_engine.py
grpc_tools_package/: users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
proto/: users.proto
